# AlmLink

./: .gitignore  README.md
cad/Standalone/: HSLink.PrjPCB  HoperRF.PcbLib  HoperRF.SchLib  Standalone.PcbDoc  Standalone.SchDoc
cad/Standalone/ProjectOutputs_RevA/: Design Rule Check - Standalone.drc  Design Rule Check - Standalone.html  O100018517_5by5_Green_1.6mm_10pcs_OpenSource.rar  Standalone-macro.APR_LIB  Standalone.DRR  Standalone.EXTREP  Standalone.GBL  Standalone.GBO  Standalone.GBP  Standalone.GBS  Standalone.GKO  Standalone.GM1  Standalone.GM2  Standalone.GPB  Standalone.GPT  Standalone.GTL  Standalone.GTO  Standalone.GTP  Standalone.GTS  Standalone.LDP  Standalone.REP  Standalone.RUL  Standalone.TXT  Standalone.apr  Status Report.Txt
setup_spi/: BBB-ALMLINK-00A0.dtbo  BBB-ALMLINK-00A0.dts  build_almlink  enable_almlink_io  setvar
software/almlink/: CMakeLists.txt
software/almlink/source/: CMakeLists.txt
software/almlink/source/application/: CMakeLists.txt  main.c
software/almlink/source/common/: CMakeLists.txt  almlink.h  board.h
software/almlink/source/common/rfm23bp/: CMakeLists.txt  rfm23bp.c  rfm23bp.h  rfm23bp_config.h  rfm23bp_lookup.c  rfm23bp_lookup.h  rfm23bp_table.h
software/almlink/source/drivers/: CMakeLists.txt  drivers.h
software/almlink/source/drivers/gpio/: CMakeLists.txt  gpio.c  gpio.h
software/almlink/source/drivers/spi/: spi.c  spi.h
software/almlink/source/libraries/: CMakeLists.txt
software/almlink/source/libraries/fifo/: CMakeLists.txt
software/almlink/source/libraries/rscode/: CMakeLists.txt  ecc.h
